syntax = "proto3";
package main;

option go_package = "github.com/rakamoviz/kincirair/main";

import "google/protobuf/timestamp.proto";

enum CqrsMessageType {
    COMMAND = 0;
    EVENT = 1;
}

message CqrsHeader {
    CqrsMessageType type = 1;
    string id = 2;
    string name = 3;
    string correlation_id = 4;
    string aggregate_id = 5;
    string aggregate_name = 6;
    string process_id = 7;
    string process_name = 8;

    google.protobuf.Timestamp sent_date = 9;
}

message BookRoom {
    CqrsHeader header = 1;
    string room_id = 2;
    string guest_name = 3;

    google.protobuf.Timestamp start_date = 4;
    google.protobuf.Timestamp end_date = 5;
}

message RoomBooked {
    CqrsHeader header = 1;
    string reservation_id = 2;
    string room_id = 3;
    string guest_name = 4;
    int64 price = 5;

    google.protobuf.Timestamp start_date = 6;
    google.protobuf.Timestamp end_date = 7;
}

message OrderBeer {
    CqrsHeader header = 1;
    string reservation_id = 2;
    string room_id = 3;
    int64 count = 4;
}

message BeerOrdered {
    CqrsHeader header = 1;
    string reservation_id = 2;
    string room_id = 3;
    int64 count = 4;
}